--- a/src/index.css
+++ b/src/index.css
@@ -1,61 +1,11 @@
 *{
+  margin: 0;
+  padding: 0;
   font-family: Cera Pro;
   box-sizing: border-box;
+  /* border: 0.4px solid #000; */
 }
 body{
-  margin: 0 8%;
-  padding: 0;
-}
-.active{
-  color: #46A358;
+  margin: 0 120px;
 }
 
-.slidePages{
-  display: flex;
-  overflow-x: hidden;
-  scroll-snap-type: x proximity;
-  scroll-behavior: smooth;
-  gap: 120px;
-}
-.slidePages::-webkit-scrollbar-track{
-  background: transparent;
-} 
-.iconHover{
-    visibility: hidden;
-    align-items: center;
-    column-gap: 90px;
-    transition: all 0.5s;
-}
-  :hover+ .iconHover{     
-       height: 35px;
-      visibility: visible;
-      column-gap: 15px;
-  };
-
-.headerPage1{
-  scroll-snap-align: start;
- flex-shrink: 0;
- transform-origin: center center;
- transform: scale(1);
- transition: transform 0.5s;
- position: relative;
-}
-.headerPage1:target{
-  transform: scale(0.8);
-}
-.sorter{
-  justify-content:space-around;
-  margin: 0 20px;
-  cursor: pointer;
-}
-.sortBy{
-  display: flex;
-  height: inherit;
-  justify-content: center;
-  align-items: center;
-  margin-left: 350px
-}
-.selectTag{
-  border: none;
-  outline: none;
-}
