--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 *{
   margin: 0;
   padding: 0;
-  font-family: Cera Pro;
   box-sizing: border-box;
-  /* border: 0.4px solid #000; */
+  font-family: 'Roboto', 'sans-serif';
 }
-body{
-  margin: 0 120px;
-}
-.navlink{
-  height: inherit;
-  text-decoration: none;
-}
-
